--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.3",
     "expo-router": "^4.0.20",
+    "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "^0.2.2",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "^0.76.5",
@@ -50,8 +52,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
     "react-native-webview": "^13.12.5",
-    "react-navigation": "^5.0.0",
-    "expo-secure-store": "~14.0.1"
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
