--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/bottom-tabs": "^7.3.3",
-    "@react-navigation/native": "^7.1.4",
-    "@react-navigation/stack": "^7.2.4",
+    "@react-navigation/drawer": "^7.3.8",
+    "@react-navigation/native": "^7.1.5",
+    "@react-navigation/stack": "^7.2.9",
     "axios": "^1.8.4",
     "expo": "~52.0.18",
     "expo-blur": "~14.0.1",
@@ -30,7 +31,6 @@
     "expo-haptics": "~14.0.0",
     "expo-image-picker": "~16.0.6",
     "expo-linking": "~7.0.3",
-    "expo-router": "^4.0.20",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.0",
@@ -48,7 +48,7 @@
     "react-native-image-picker": "^8.2.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.14.1",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.19.13",
     "react-native-webview": "^13.12.5",
@@ -58,8 +58,11 @@
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "@types/react-native-dotenv": "^0.2.2",
+    "@types/react-navigation": "^3.0.8",
     "@types/react-test-renderer": "^18.3.0",
+    "expo-router": "^4.0.20",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
